# jord

./: CMakeLists.txt  README.md
include/: cartesian.h  geodetic.h  jord_traits.h
src/: cartesian.cpp  geodetic.cpp
tests/: CMakeLists.txt  test_geodetic.cpp
